--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
